alignment corrected

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -395,6 +395,9 @@ section {
   background-color: #149ddd;
 }
 
+.resume{
+  margin-bottom: -50px;
+}
 
 .resume .resume-title {
   font-size: 26px;
@@ -474,6 +477,7 @@ section {
 
 
 .contact {
+  margin-top: -50px;
   padding-bottom: 130px;
 }
 
